--- a/src/test/Reports/ExtentReports.html
+++ b/src/test/Reports/ExtentReports.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2018-02-11 17:18:39</span>
+					<span class='suite-started-time'>2018-09-08 22:33:35</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 44s+465ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 51s+81ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 44s+465ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 51s+81ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2018-02-11 17:17:55</span> 
+							<span class='panel-lead suite-started-time'>2018-09-08 22:32:44</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2018-02-11 17:18:39</span> 
+							<span class='panel-lead suite-ended-time'>2018-09-08 22:33:35</span> 
 						</div> 
 					</div>
 				</div>
@@ -172,15 +172,15 @@
 										</tr>
 										<tr>
 											<td>OS</td>
-											<td>Windows 7</td>
+											<td>Windows 10</td>
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_162</td>
+											<td>1.8.0_181</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>Soumyansh-PC</td>
+											<td>DESKTOP-9AS02US</td>
 										</tr>
 								</tbody>
 							</table>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='e66d016b-5a69-4793-848c-ffb075256d38'>
+										<li class='collection-item test displayed active pass ' extentid='80334382-68e9-4090-9027-e89536d1e86e'>
 											<div class='test-head'>
-												<span class='test-name'>DOLOGIN </span>
+												<span class='test-name'>DOLOGIN_USER </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-02-11 17:18:19</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-02-11 17:18:23</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+900ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-09-08 22:32:56</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-09-08 22:32:58</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+491ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,13 +264,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:18:23</td>
+																	<td class='timestamp'>22:32:58</td>
 																	<td class='step-details'>completed successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:18:23</td>
-																	<td class='step-details'><a href='C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sun_Feb_11_17_18_23_IST_2018.jpg' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sun_Feb_11_17_18_23_IST_2018.jpg' /></a></td>
+																	<td class='timestamp'>22:32:58</td>
+																	<td class='step-details'><a href='C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sat_Sep_08_22_32_58_IST_2018.jpg' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sat_Sep_08_22_32_58_IST_2018.jpg' /></a></td>
 																</tr>
 														</tbody>
 													</table>
@@ -279,17 +279,17 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='e88a8746-a4ee-49f1-b82c-76144598240e'>
+										<li class='collection-item test displayed active pass ' extentid='b3532c7f-3a2c-42ae-809c-c736ad2828b2'>
 											<div class='test-head'>
-												<span class='test-name'>CREATEACCOUNT </span>
+												<span class='test-name'>CREATEACCOUNTTEST_USER </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-02-11 17:18:24</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-02-11 17:18:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 15s+11ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-09-08 22:32:58</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-09-08 22:33:35</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 37s+89ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -306,13 +306,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:18:39</td>
+																	<td class='timestamp'>22:33:35</td>
 																	<td class='step-details'>completed successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:18:39</td>
-																	<td class='step-details'><a href='C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sun_Feb_11_17_18_39_IST_2018.jpg' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sun_Feb_11_17_18_39_IST_2018.jpg' /></a></td>
+																	<td class='timestamp'>22:33:35</td>
+																	<td class='step-details'><a href='C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sat_Sep_08_22_33_35_IST_2018.jpg' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Soumyansh\eclipse-workspace\CompletePOM//src//test//Screenshots//Screen_Sat_Sep_08_22_33_35_IST_2018.jpg' /></a></td>
 																</tr>
 														</tbody>
 													</table>
