--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e67e6a">  <td>18/01/30 19:25:05</td>   <td>0</td> <td title="&gt;&gt;TestBase.setup()[pri:0, instance:TestCases.LoginTest@36eb5f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14486859</td>   <td></td> </tr>
-<tr bgcolor="e67e6a">  <td>18/01/30 19:25:25</td>   <td>19954</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:TestCases.LoginTest@36eb5f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14486859</td>   <td></td> </tr>
+<tr bgcolor="7ed3be">  <td>18/09/08 22:10:29</td>   <td>0</td> <td title="&gt;&gt;TestBase.setup()[pri:0, instance:TestCases.CreateAccountTest_User@5b94b04d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>18/09/08 22:11:18</td>   <td>49318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_User.doLogin_User(java.util.Hashtable)[pri:0, instance:TestCases.LoginTest_User@69453e37]">doLogin_User</td> 
+  <td>main@954702563</td>   <td></td> </tr>
+<tr bgcolor="be9564">  <td>18/09/08 22:11:32</td>   <td>63470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAccountTest_User.CreateAccountTest_User(java.util.Hashtable)[pri:0, instance:TestCases.CreateAccountTest_User@5b94b04d]">CreateAccountTest_User</td> 
+  <td>main@954702563</td>   <td></td> </tr>
+<tr bgcolor="7ed3be">  <td>18/09/08 22:15:56</td>   <td>327353</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:TestCases.CreateAccountTest_User@5b94b04d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
 </table>
